kubernetes/manual/download/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.greenappleton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: download
            port:
              name: jellyfin
  tls:
  - hosts:
    - jellyfin.greenappleton.com
    secretName: jellyfin.greenappleton.com

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

spec:
  ingressClassName: nginx
  rules:
  - host: sonarr.greenappleton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: download
            port:
              name: sonarr
  tls:
  - hosts:
    - sonarr.greenappleton.com
    secretName: sonarr.greenappleton.com

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

spec:
  ingressClassName: nginx
  rules:
  - host: radarr.greenappleton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: download
            port:
              name: radarr
  tls:
  - hosts:
    - radarr.greenappleton.com
    secretName: radarr.greenappleton.com

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

spec:
  ingressClassName: nginx
  rules:
  - host: prowlarr.greenappleton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: download
            port:
              name: prowlarr
  tls:
  - hosts:
    - prowlarr.greenappleton.com
    secretName: prowlarr.greenappleton.com

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

spec:
  ingressClassName: nginx
  rules:
  - host: transmission.greenappleton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: download
            port:
              name: transmission
  tls:
  - hosts:
    - transmission.greenappleton.com
    secretName: transmission.greenappleton.com

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

spec:
  ingressClassName: nginx
  rules:
  - host: sabnzbd.greenappleton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: download
            port:
              name: sabnzbd
  tls:
  - hosts:
    - sabnzbd.greenappleton.com
    secretName: sabnzbd.greenappleton.com

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

spec:
  ingressClassName: nginx
  rules:
  - host: bazarr.greenappleton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: download
            port:
              name: bazarr
  tls:
  - hosts:
    - bazarr.greenappleton.com
    secretName: bazarr.greenappleton.com
